--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <section>
         <div>
-            <img class="w-full" src="./Assets/TylerTheGoat.gif"
+            <!-- If you download the gif replace this and it should be better -->
+            <img class="w-full" src="./Assets/TylerTheGoat.png" 
                 alt="Video Collage of Tyler The Creator talking at multiple events">
         </div>
     </section>
