--- a/Pages/why.html
+++ b/Pages/why.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link href="../dist/output.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Why</title>
     <link rel="shortcut icon" href="../Assets/download.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/ndt5csr.css">
     <link rel="stylesheet" href="../styles/style.css">
