--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         ALBUMS
     </div>
 
-    <div class="grid lg:grid-cols-3 mx-auto gap-5 flex-col font-bold px-8">
+    <div class="grid grid-cols-2 lg:grid-cols-3 mx-auto gap-5 flex-col font-bold px-8">
         <div class=" font-bold flex flex-col justify-center items-center">
             <img src="./Assets/Goblin.png" alt="Goblin Album Cover">
             <p class="lg:text-6xl md:text-5xl text-4xl mt-6">Goblin</p>
