--- a/Pages/favorites.html
+++ b/Pages/favorites.html
@@ -32,11 +32,11 @@
             <p class="pt-3">Sorry Not Sorry</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="h-64" src="../Assets/wharf.png" alt="Wharf talk poster">
+            <img class="max-h-36" src="../Assets/wharf.png" alt="Wharf talk poster">
             <p class="pt-3">Wharf Talk</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="xl:h-64 px-20 lg:px-0" src="../Assets/Earfquake.jpg" alt="Earfquake">
+            <img class=" xl:h-64 px-20 lg:px-0" src="../Assets/Earfquake.jpg" alt="Earfquake">
             <p class="pt-3">Earfquake</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
