--- a/Pages/why.html
+++ b/Pages/why.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="../Assets/download.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/ndt5csr.css">
     <link rel="stylesheet" href="../styles/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -64,7 +65,7 @@
 
 
 
-    <script src=".../node_modules/flowbite/dist/flowbite.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
 </body>
 
 </html>
