Change sizing from xl: h-64 to h-64

--- a/Pages/favorites.html
+++ b/Pages/favorites.html
@@ -29,7 +29,7 @@
     <p class="text-center text-5xl  mb-9">My Top Tyler Songs</p>
     <div class="grid lg:grid-cols-3  gap-16 lg:mx-20 text-3xl font-semibold">
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="xl:h-64 px-20 lg:px-0" src="../Assets/SryNotSry.jpg" alt="Sorry Not Sorry">
+            <img class="h-64 px-20 lg:px-0" src="../Assets/SryNotSry.jpg" alt="Sorry Not Sorry">
             <p class="pt-3">Sorry Not Sorry</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
@@ -41,7 +41,7 @@
             <p class="pt-3">Earfquake</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="xl:h-64 px-20 lg:px-0" src="../Assets/NewMagic.jpg" alt="Tyler performing New Magic Wand">
+            <img class="h-64 px-20 lg:px-0" src="../Assets/NewMagic.jpg" alt="Tyler performing New Magic Wand">
             <p class="pt-3">New Magic Wand</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
@@ -49,7 +49,7 @@
             <p class="pt-3">She</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="xl:h-64 px-20 lg:px-0" src="../Assets/wasyuname.jpg" alt="Wusyaname">
+            <img class="h-64 px-20 lg:px-0" src="../Assets/wasyuname.jpg" alt="Wusyaname">
             <p class="pt-3">WUSYANAME</p>
         </div>
         
@@ -57,7 +57,7 @@
     </div>
     <p class="text-center mb-7 text-2xl pt-12">Listen To full playlist here:</p>
     <div class="w-full flex justify-center mb-8">
-        <div class="lg:w-1/4 w-3/4">
+        <div class="lg:w-2/4 w-3/4">
             <iframe style="border-radius:12px;"
                 src="https://open.spotify.com/embed/playlist/4qf3Mv9DsZUn5rPbPn2EGJ?utm_source=generator" width="100%"
                 height="300px" frameBorder="0" allowfullscreen=""
