Changed embed size

--- a/Pages/favorites.html
+++ b/Pages/favorites.html
@@ -57,7 +57,7 @@
     </div>
     <p class="text-center mb-7 text-2xl pt-12">Listen To full playlist here:</p>
     <div class="w-full flex justify-center mb-8">
-        <div class="lg:w-2/4 w-3/4">
+        <div class="w-3/4">
             <iframe style="border-radius:12px;"
                 src="https://open.spotify.com/embed/playlist/4qf3Mv9DsZUn5rPbPn2EGJ?utm_source=generator" width="100%"
                 height="300px" frameBorder="0" allowfullscreen=""
