--- a/Pages/favorites.html
+++ b/Pages/favorites.html
@@ -27,7 +27,7 @@
     </nav>
 
     <p class="text-center text-5xl  mb-9">My Top Tyler Songs</p>
-    <div class="grid lg:grid-cols-3  gap-12 lg:mx-20 text-3xl font-semibold">
+    <div class="grid lg:grid-cols-3 pt-5  gap-12 lg:mx-20 text-3xl font-semibold">
         <div class="text-center flex flex-col justify-center items-center">
             <img class="h-64 px-20 lg:px-0" src="../Assets/SryNotSry.jpg" alt="Sorry Not Sorry">
             <p class="pt-3">Sorry Not Sorry</p>
