Changed to max height

--- a/Pages/favorites.html
+++ b/Pages/favorites.html
@@ -29,27 +29,27 @@
     <p class="text-center text-5xl  mb-9">My Top Tyler Songs</p>
     <div class="grid lg:grid-cols-3 pt-5  gap-12 lg:mx-20 text-3xl font-semibold">
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="h-64 px-20 lg:px-0" src="../Assets/SryNotSry.jpg" alt="Sorry Not Sorry">
+            <img class="max-h-64 px-20 lg:px-0" src="../Assets/SryNotSry.jpg" alt="Sorry Not Sorry">
             <p class="pt-3">Sorry Not Sorry</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="h-64" src="../Assets/wharf.png" alt="Wharf talk poster">
+            <img class="max-h-64" src="../Assets/wharf.png" alt="Wharf talk poster">
             <p class="pt-3">Wharf Talk</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="h-64 px-20 lg:px-0" src="../Assets/Earfquake.jpg" alt="Earfquake">
+            <img class="max-h-64 px-20 lg:px-0" src="../Assets/Earfquake.jpg" alt="Earfquake">
             <p class="pt-3">Earfquake</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="h-64 px-20 lg:px-0" src="../Assets/NewMagic.jpg" alt="Tyler performing New Magic Wand">
+            <img class="max-h-64 px-20 lg:px-0" src="../Assets/NewMagic.jpg" alt="Tyler performing New Magic Wand">
             <p class="pt-3">New Magic Wand</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="h-64" src="../Assets/She.png" alt="Art for the song She">
+            <img class="max-h-64" src="../Assets/She.png" alt="Art for the song She">
             <p class="pt-3">She</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="h-64 px-20 lg:px-0" src="../Assets/wasyuname.jpg" alt="Wusyaname">
+            <img class="max-h-64 px-20 lg:px-0" src="../Assets/wasyuname.jpg" alt="Wusyaname">
             <p class="pt-3">WUSYANAME</p>
         </div>
         
