--- a/Pages/favorites.html
+++ b/Pages/favorites.html
@@ -33,23 +33,23 @@
             <p class="pt-3">Sorry Not Sorry</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="h-24 md:h-64 src="../Assets/wharf.png" alt="Wharf talk poster">
+            <img class="h-48 md:h-64" src="../Assets/wharf.png" alt="Wharf talk poster">
             <p class="pt-3">Wharf Talk</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="h-24 md:h-64 px-20 lg:px-0" src="../Assets/Earfquake.jpg" alt="Earfquake">
+            <img class="h-48 md:h-64 px-20 lg:px-0" src="../Assets/Earfquake.jpg" alt="Earfquake">
             <p class="pt-3">Earfquake</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="h-24 md:h-64 px-20 lg:px-0" src="../Assets/NewMagic.jpg" alt="Tyler performing New Magic Wand">
+            <img class="h-48 md:h-64 px-20 lg:px-0" src="../Assets/NewMagic.jpg" alt="Tyler performing New Magic Wand">
             <p class="pt-3">New Magic Wand</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="h-24 md:h-64" src="../Assets/She.png" alt="Art for the song She">
+            <img class="h-48 md:h-64" src="../Assets/She.png" alt="Art for the song She">
             <p class="pt-3">She</p>
         </div>
         <div class="text-center flex flex-col justify-center items-center">
-            <img class="h-24 md:h-64 px-20 lg:px-0" src="../Assets/wasyuname.jpg" alt="Wusyaname">
+            <img class="sm:h-48 md:h-64 px-20 lg:px-0" src="../Assets/wasyuname.jpg" alt="Wusyaname">
             <p class="pt-3">WUSYANAME</p>
         </div>
         
