--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -26,7 +26,7 @@
         </div>
     </nav>
 
-    <p class="text-center text-5xl mb-9">Videos</p>
+    <p class="text-center text-5xl pb-6">Videos</p>
     <div class="grid xl:grid-cols-3 gap-16 gap-x-1 mx-3 pb-5">
         <div class="flex flex-col justify-center items-center">
             <iframe class="aspect-auto" width="490" height="273" src="https://www.youtube.com/embed/5JzBgPghQrk?si=ck4RmwPhW3279fcS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
